# A_stock_analysis_agent

./: .env.example  .gitignore  Makefile  PROJECT_SPEC.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_agent_checkpoint.py
backend/app/: main.py
backend/app/agent/: context_engineering.py  graph.py  state.py
backend/app/agent/nodes/: check_freshness.py  evaluate_output.py  generate_report.py  load_context.py  retrieve_evidence.py  run_skills.py  update_memory.py  verify_evidence.py
backend/app/agent/prompts/: evidence_verify.md  fundamental_report.md  sector_reasoning.md
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  logging.py  redis.py  security.py
backend/app/mcp_clients/: __init__.py  base.py  financial_report.py  market_data.py  news_sector.py  wiki_memory.py
backend/app/models/: agent.py  base.py  eval.py  financial.py  memory.py  report.py  stock.py  wiki.py
backend/app/providers/: akshare_provider.py  base.py  cninfo_provider.py  mock_provider.py  tushare_provider.py
backend/app/schemas/: agent.py  eval.py  memory.py  report.py  stock.py  wiki.py
backend/app/seed/: seed_demo_data.py
backend/app/services/: llm.py
backend/app/skills/: executor.py  registry.py
backend/app/tests/: test_context_engineering.py  test_health.py  test_skills.py  verify_agent_flow.py
backend/app/workers/: celery_app.py  scheduler.py  tasks_agent.py  tasks_data_update.py  tasks_reports.py
(+123 files in other folders)
