[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-fundamental-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "asyncpg>=0.30,<1",
  "alembic>=1.14,<2",
  "pgvector>=0.3,<1",
  "redis>=5.2,<6",
  "celery>=5.4,<6",
  "apscheduler>=3.11,<4",
  "langgraph>=0.4,<1",
  "rank-bm25>=0.2,<1",
  "python-multipart>=0.0.20,<1",
  "httpx>=0.28,<1",
  "akshare>=1.17,<2",
  "pytest>=8.3,<9"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
